crates/uitest/fixtures/parser/match_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/match_.fe
---
error[1-0001]: unexpected syntax while parsing `match` expression
  ┌─ match_.fe:2:10
  │
2 │ match X  => {
  │          ^^ unexpected

error[1-0001]: expected `=>`
  ┌─ match_.fe:4:7
  │
4 │    Bar
  │       ^ expected `=>`

error[1-0001]: expected pattern
  ┌─ match_.fe:8:13
  │
8 │    Foo(i, j,   => true x
  │             ^ expected pattern

error[1-0001]: unexpected syntax while parsing `match` arm list
  ┌─ match_.fe:8:24
  │
8 │    Foo(i, j,   => true x
  │                        ^ unexpected


